Refactor: Simplify test method annotations; add `PromptTemplateSource`
Updated test method annotations in `ChatLanguageModelTest` to be package-private. Integrated `PromptTemplateSource` and `PromptTemplate` into multiple classes to support system message templates via an external source. Enhanced `AiServicesSystemAndUserMessageConfigsTest` to validate `PromptTemplateSource` functionality, including mock setups and verifications. Made minor project configurations and formatting adjustments.